third_party/move/move-compiler-v2/tests/checking/typing/uninferred_type_pack.exp

Diagnostics:
error: unable to infer instantiation of type `S<_>` (consider providing type arguments or annotating the type)
  ┌─ tests/checking/typing/uninferred_type_pack.move:5:9
  │
5 │         S{};
  │         ^^^
